chore: adding drain state
